[package]
name = "tsos"
version = "0.1.0"
authors = ["Daniel Goß <developer@flashsystems.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = [ "derive"] }
toml = "0.5"
log = "0.4"
simple_logger = "1.3"