[package]
name = "tsos"
version = "0.1.0"
authors = ["Daniel Goß <developer@flashsystems.de>"]
edition = "2018"

[features]
defautl = []
acl = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = [ "derive"] }
toml = "0.5"
log = "0.4"
simple_logger = "1.3"
#acl-sys = "1.0"
#acl-sys = { path = "../acl-sys"}
