[package]
name = "tsos"
version = "0.1.0"
authors = ["Daniel Goß <developer@flashsystems.de>"]
edition = "2018"

[features]
defautl = [ "acl", "systemd" ]
acl = []
systemd = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
log = "0.4"
simple_logger = "1.3"

[dev-dependencies]
temp_testdir = "0.2"